--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,27 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# ===============================
+# Project-specific ignores
+# ===============================
+
+# Virtual environments
+.venv/
+venv/
+.env
+
+# OS
+.DS_Store
+
+# Data (never commit datasets)
+data/
+*.csv
+*.parquet
+*.zip
+
+# Outputs / artifacts
+outputs/
+models/
+logs/
+
